--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,11 @@
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"index.js"
+            "dest":"index.js",
+            "methods":["GET","POST"],
+            "headers":{
+                "Access-Control-Allow-Origin":"*"
+            }
         }
     ]
 }
