--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,11 +9,7 @@
     "routes":[
         {
             "src":"/(.*)",
-            "dest":"index.js",
-            "methods":["GET","POST"],
-            "headers":{
-                "Access-Control-Allow-Origin":"https://chatapp-client-pearl.vercel.app"
-            }
+            "dest":"index.js"           
         }
     ]
 }
